@@ -1,0 +1,31 @@
+<?xml version="1.0" encoding="iso-8859-15" ?>
+<import export_time="2011-01-02 03:04:00">
+
+    <item status="1" suchbar="1" mutationsdatum="2010-05-17 16:34:00" datumvon="2010-05-18 12:00:00" datumbis="2020-01-01 00:00:00">
+        <id>uid00000000000000000000000000004</id>
+        <url_web>http://nohost/plone/news-folder/largest-aircraft-in-the-world</url_web>
+        <titel>Largest Aircraft in the World</titel>
+        <textlead></textlead>
+
+        <textmobile>
+            <![CDATA[]]>
+        </textmobile>
+    </item>
+    <item status="1" suchbar="1" mutationsdatum="2010-03-14 20:18:00" datumvon="2010-03-15 12:00:00">
+        <id>uid00000000000000000000000000002</id>
+        <url_web>http://nohost/plone/news-folder/usain-bolt-at-the-olympics</url_web>
+        <titel>Usain Bolt at the Olympics</titel>
+        <textlead>&lt;![CDATA[Usain Bolt wins the Olympic gold in three events.
+
+The third is for a 100-metre relay.]]&gt;</textlead>
+        <url_bild>http://nohost/plone/news-folder/usain-bolt-at-the-olympics/ftw-simplelayout-textblock/image.jpg</url_bild>
+        <textmobile>
+            <![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sapientem locupletat ipsa natura, cuius divitias Epicurus parabiles esse docuit. Multa sunt dicta ab antiquis de contemnendis ac despiciendis rebus humanis.
+
+ Lorem ipsum dolor sit amet, consectetur adipiscing elit. At certe gravius. Ut optime, secundum naturam affectum esse possit. Quia dolori non voluptas contraria est, sed doloris privatio. Non minor, inquit, voluptas percipitur ex vilissimis rebus quam ex pretiosissimis. Sed nunc, quod agimus; Duo Reges: constructio interrete.]]>
+        </textmobile>
+        <rubrik>Homepage</rubrik>
+        <rubrik>Sports</rubrik>
+    </item>
+
+</import>
