@@ -5,7 +5,7 @@ extends =
 extensions += mr.developer
 
 auto-checkout =
-# Waiting for the first release of ftw.simplelayout on PyPI.
+# https://github.com/4teamwork/ftw.simplelayout/pull/369
     ftw.simplelayout
 # https://github.com/4teamwork/ftw.datepicker/pull/3
     ftw.datepicker
